# explainable-methods-in-exercise-analysis

./: .gitignore  README.md  pyproject.toml
configs/: lunges.yaml  plank.yaml  squat.yaml
docs/notebooks/: data_processing.ipynb  evaluation.ipynb  explainer.ipynb  lstm_autocoder.ipynb  lstm_explainer.ipynb  statistical_approach.ipynb  visualization.ipynb
docs/notebooks/lstm/: lstm_autocoder.ipynb  lstm_classification.ipynb  lstm_explainer.ipynb
notebooks/: data_processing.ipynb  lstm.ipynb
notebooks/lstm/: lstm_autocoder.ipynb  lstm_classification.ipynb
scripts/: explain.py  process_data.py  train_ae.py  train_latent_classifier.py  train_vae.py
src/: dataset.py  explainer.py  processor.py  trainer.py
src/ae_architectures/: lstm.py
src/architectures/: lstm.py
src/architectures/lstm/: autoencoder.py  classifier.py
src/deep_models/: vae_lstm.py
src/utils/: constants.py  data.py  dataset.py  evaluation.py  inference.py  models.py  train.py  visualization.py
src/vae_architectures/: graph_cnn.py  lstm.py  signal_cnn.py
