[build-system]
requires = [
  "wheel",
  "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Hubert Rudzik", email = "hubertR2019@gmail.com"}
]
name = "explainable-methods-in-exercise-analysis"
version = "1.0"
description = "Analysis of explainable methods in exercise analysis"
requires-python = ">=3.11"
keywords = ["AI", "pose estimation", "XAI"]
readme = "README.md"

dependencies = [
  "matplotlib>=3.8.2",
  "mediapipe==0.10.9",
  "numpy>=1.26.2",
  "opencv-python>=4.8.1.78",
  "pandas>=2.1.4",
  "setuptools>=65.5.0",
  "dtw-python>=1.3.1",
  "pyyaml>=6.0.1",
  "scikit-learn>=1.4.0",
  "torch>=2.2.0"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Video :: Capture",
  "Topic :: Multimedia :: Video :: Display",
  "Topic :: Multimedia :: Video :: Conversion",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Utilities"
]

[project.optional-dependencies]
dev = [
  "isort>=5.13.2",
  "black>=23.12.0"
]
